@@ -1,12 +1,7 @@
 {
-  "count": 10,
-  "uniques": 7,
+  "count": 7,
+  "uniques": 5,
   "views": [
-    {
-      "timestamp": "2025-02-13T00:00:00Z",
-      "count": 3,
-      "uniques": 2
-    },
     {
       "timestamp": "2025-02-16T00:00:00Z",
       "count": 3,
